# hemovision

./: .gitignore  BUG_LOG.md  CMakeLists.txt  CODE_MAP.md  DIGITAL_EQUITY_REPORT.md  INTERVIEW_DEFENSE_GUIDE.md  LICENSE  README.md  pubspec.yaml  setup_offline_assets.ps1
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: flutter_ci.yml
android/app/: build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
ios/: Podfile
ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: core_engine.dart  core_engine_ffi.dart  core_engine_web.dart  main.dart
lib/controllers/: main_controller.dart
lib/engines/: simulated_vision_engine.dart  vision_engine.dart  yolo_vision_engine.dart
lib/services/: caregiver_service.dart  caregiver_service_native.dart  caregiver_service_web.dart  database_service.dart  mic_service.dart  settings_service.dart  spatial_audio_service.dart
lib/views/: caregiver_view.dart  home_view.dart  onboarding_view.dart  settings_view.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/: core_engine.cpp  core_engine.h  engine_test.cpp
test/: caregiver_service_test.dart  engine_logic_test.dart  hardware_guard_test.dart  settings_view_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+3 files in other folders)
